--- a/src/js/get-query/package.json
+++ b/src/js/get-query/package.json
@@ -2,6 +2,7 @@
   "name": "refuge-t4a-get-query",
   "dependencies": {
     "@architect/functions": "latest",
-    "@begin-functions/data": "latest"
+    "@begin-functions/data": "latest",
+    "faunadb": "^2.5.0"
   }
 }
